--- a/index.html
+++ b/index.html
@@ -7,30 +7,27 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js" defer></script>
+    <!doctype html>
 
 </head>
 <body>
     <div class="container">
-        <div class="form">
-            <label for="title">Title</label>
-            <input type="text" name="title" id="title" onchange="handleChangeTitle()">
-             <label for="author">Author</label>
-            <input type="text" name="author" id="author" onchange="handleChangeAuthor()">
-            <label for="pages">Pages</label>
-            <input type="text" name="pages" id="pages" onchange="handleChangePages()">
-            <label for="tag">Tag</label>
-            <input type="text" name="tag" id="tag" onchange="handleChangeTag()">
-            <fieldset>
-                <div class="read">
-                    <input type="radio" name="read" id="read">
-                    <label for="read">Read</label>
-                </div>
-                <div class="not_read">
-                    <input type="radio" name="not_read" id="not_read">
-                    <label for="not_read">Not Read</label>
-                </div>
-            </fieldset>
-            <button class="add">Add to Library</button>
+        <form autocomplete='off' action="">
+            <div class="form">
+                <label for="title">Title</label>
+                <input type="text" name="title" id="title" onchange="handleChangeTitle()" required>
+                 <label for="author">Author</label>
+                <input type="text" name="author" id="author" onchange="handleChangeAuthor()" required>
+                <label for="pages">Pages</label>
+                <input type="text" name="pages" id="pages" onchange="handleChangePages()" required>
+                <label for="read">Did you read it?</label>
+                <select name="read" id="read" onchange="handleChangeRead()" required>
+                    <option value="not specified"> </option>
+                    <option value="yes">Yes</option>
+                    <option value="no">No</option>
+                </select>
+                <input type="submit" value="Add to Library" class="add"></input>
+        </form>
         </div>
         <div class="library">
         </div>
